--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="msapplication-TileImage" content="assets/icon.png">
     <meta name="msapplication-TileColor" content="#222222">
 
-    <meta property="og:url" content="/manga-reader/">
+    <meta property="og:url" content="./">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Manga Reader">
     <meta property="og:image" content="assets/icon.png">
